# Practical_C-_Design

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  stack.cpp
src/backend/inc/: stack.h
src/utils/: CMakeLists.txt  publisher.cpp
src/utils/inc/: observer.h  publisher.h
test_package/: conanfile.py
tests/: CMakeLists.txt  backend_test.cpp  tests.cpp  utils_test.cpp
